# Camera2GLPreview

./: .gitignore  README.md  build.gradle  cdep  cdep.yml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/media/camera/preview/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/media/camera2glpreview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CommonUtils.cpp  CommonUtils.h  GLShaders.h  GLUtils.cpp  GLUtils.h  GLVideoRendererYUV420.cpp  GLVideoRendererYUV420.h  GLVideoRendererYUV420Filter.cpp  GLVideoRendererYUV420Filter.h  Log.h  VKShaders.h  VKUtils.cpp  VKUtils.h  VKVideoRendererYUV420.cpp  VKVideoRendererYUV420.h  VideoRender.cpp  VideoRender.h  VideoRenderContext.cpp  VideoRenderContext.h  VideoRenderJNI.cpp  VideoRenderJNI.h  VideoRenderYUV420.cpp  VideoRenderYUV420.h  VideoRenderer.cpp  VideoRenderer.h  VideoRendererContext.cpp  VideoRendererContext.h  VideoRendererJNI.cpp  VideoRendererJNI.h  VideoRendererYUV420.cpp  VideoRendererYUV420.h  VideoRendererYUV420Filter.cpp  VideoRendererYUV420Filter.h
app/src/main/java/com/media/camera/preview/activity/: BaseActivity.java  GLActivity.java  VKActivity.java
app/src/main/java/com/media/camera/preview/adapter/: ItemAdapter.java
app/src/main/java/com/media/camera/preview/capture/: PreviewFrameHandler.java  VideoCameraPreview.java  VideoCapture.java
app/src/main/java/com/media/camera/preview/controller/: CameraController.java
app/src/main/java/com/media/camera/preview/gesture/: SimpleGestureFilter.java
app/src/main/java/com/media/camera/preview/render/: GLVideoRenderer.java  VKVideoRenderer.java  VideoRenderer.java
app/src/main/java/com/media/camera/preview/view/: ItemRow.java  SizeItemRow.java
app/src/main/java/com/media/camera2glpreview/: MainActivity.java  VKActivity.java
app/src/main/java/com/media/camera2glpreview/capture/: PreviewFrameHandler.java  VideoCameraPreview.java  VideoCapture.java
app/src/main/java/com/media/camera2glpreview/gesture/: SimpleGestureFilter.java
app/src/main/java/com/media/camera2glpreview/render/: GLVideoRenderer.java  VKVideoRenderer.java  VideoRender.java  VideoRenderer.java
app/src/main/res/layout/: activity_gl.xml  activity_main.xml  activity_vk.xml  dialog.xml  resolution_dialog.xml  size_list_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/shaders/: video_frame.frag  video_frame.vert
app/src/test/java/com/media/camera/preview/: ExampleUnitTest.java
app/src/test/java/com/media/camera2glpreview/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
